Bug 1498866 - Only delete original template when saving new template, manage auto-saved versions. r=aceman